<resources>
    <string name="app_name">املاک</string>
    <string name="send_email">ارسال ایمیل</string>
    <string name="send_comment">ارسال نظر</string>
    <string name="developer">توسعه دهنده:</string>
    <string name="developer_name">میلاد کیانی</string>
    <string name="app_icon">لوگوی برنامه</string>
    <string name="about">درباره</string>
    <string name="house_rent">"اجاره: %s تومان"</string>
    <string name="house_prepayment">"رهن: %s تومان"</string>
    <string name="house_sell">"فروش: %s تومان"</string>
    <string name="house_room">"%s خوابه"</string>
    <string name="house_room_option">"%s# خوابه"</string>
    <string name="house_size">"%s متر"</string>
    <string name="house_furniture">"مبله"</string>
    <string name="feature_title">امکانات</string>
    <string name="rule_title">شرایط همکاری</string>
    <string name="category_title">دسته بندی</string>
    <string name="villa">ویلایی</string>
    <string name="apartment">آپارتمانی</string>
    <string name="commercial">تجاری</string>
    <string name="agricultural">کشاورزی</string>
    <string name="filter">فیلتر</string>
    <string name="room_title">اتاق خواب</string>
    <string name="sell_price">قیمت فروش</string>
    <string name="filter_btn">فیلتر</string>
    <string name="clear_btn">پاک کن</string>
    <string name="house_option">"#%s"</string>
    <string name="prepayment_price">رهن</string>
    <string name="rent_price">اجاره بها</string>
    <string name="house_location">%s، %s</string>
    <string name="not_connected">اتصال شما به اینترنت برقرار نیست</string>
    <string name="next">بعدی</string>
    <string name="previous">قبلی</string>
    <string name="house_img_count">%d</string>
    <string name="city_hint">شهر…</string>
    <string name="neighborhood_hint">محله…</string>
    <string name="last_update">آخرین بروزرسانی</string>
    <string name="house_img_content">تصاویر ملک %s</string>
    <string name="house_images">تصاویر ملک</string>
    <string name="back">بازگشت</string>
    <string name="not_found_any_houses">هیچ ملکی پیدا نشد!</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="transition_photo">transition_photo</string>
    <string name="search">جستجو</string>
    <string name="search_hint">جستجو…</string>
    <string name="price">"%s ت"</string>
    <string name="neighborhood">محله</string>
    <string name="call">تماس</string>
    <string name="house_notification_channel_id">house_channel_id</string>
    <string name="house_notification_title">دنبال خونه خوب میگردی؟</string>
    <string name="house_notification_message">50% تخفیف آپارتمان</string>
    <string name="house_notification_channel_name">house_channel</string>
    <string name="more">بیشتر</string>
    <string name="message_subscribed">تصویب شد</string>
    <string name="message_subscribe_failed">تصویب نشد</string>
</resources>
