<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mili.housead.gallery.GalleryViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".gallery.GalleryFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/gallery_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:listImage="@{viewModel.gallery}" />

        <ImageButton
            android:id="@+id/next_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/dark_button_next"
            android:contentDescription="@string/next"
            android:padding="@dimen/spacing_small"
            app:srcCompat="@drawable/ic_chevron_right_white_48dp" />

        <ImageButton
            android:id="@+id/previous_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/dark_button_previous"
            android:contentDescription="@string/previous"
            android:padding="@dimen/spacing_small"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_chevron_left_white_48dp" />
        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:background="@color/transparent"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            app:srcCompat="@drawable/ic_chevron_left_white_48dp" />
    </FrameLayout>


</layout>